--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3), 0px 2px 6px 2px rgba(0, 0, 0, 0.15);
   --color-bgleft:#3B82F6;
   --color-bgright:#2DD4BF;
   --color-bgcheck:#00589c;
+  --color-bgtitle:#F9FAFB;
   
   
 
